[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

serde = {version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }

url = { version = "2.5", default-features = false }
ring = { version = "0.17", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"], default-features = false }
dotenv = { version = "0.15", default-features = false }